ukui-bluetooth (1.0.0-1kylin1k37) v101; urgency=medium

  * 添加根据蓝牙状态改变托盘图标

 -- guang tang <tangguang@kylinos.cn>  Thu, 15 Apr 2021 16:16:39 +0800

ukui-bluetooth (1.0.0-1kylin1k36) v101; urgency=medium

  * 添加蓝牙配对蓝牙键盘输入PIN错误后提示对话框
  * 添加蓝牙发送文件没有配对的设备时提示信息

 -- guang tang <tangguang@kylinos.cn>  Wed, 31 Mar 2021 16:45:32 +0800

ukui-bluetooth (1.0.0-1kylin1k35) v101; urgency=medium

  * 蓝牙界面字体显示不全(bug#43968)

 -- guang tang <tangguang@kylinos.cn>  Wed, 24 Mar 2021 15:15:01 +0800

ukui-bluetooth (1.0.0-1kylin1k34) v101; urgency=medium

  * 修改蓝牙键盘配对时连接框翻译

 -- guang tang <tangguang@kylinos.cn>  Mon, 22 Mar 2021 17:35:58 +0800

ukui-bluetooth (1.0.0-1kylin1k33) v101; urgency=medium

  * 解决控制面板在点击移除蓝牙键盘闪退(bug#43352/bug#43821)

 -- guang tang <tangguang@kylinos.cn>  Mon, 22 Mar 2021 16:38:44 +0800

ukui-bluetooth (1.0.0-1kylin1k32) v101; urgency=medium

  * 解决蓝牙配对连接过程中，出现先连接成功，然后断开连接，最终再连接成功的现象(bug#42997)

 -- guang tang <tangguang@kylinos.cn>  Wed, 17 Mar 2021 22:03:25 +0800

ukui-bluetooth (1.0.0-1kylin1k31) v101; urgency=medium

  * 添加控制面板对音频设备连接逻辑

 -- guang tang <tangguang@kylinos.cn>  Thu, 11 Mar 2021 22:22:05 +0800

ukui-bluetooth (1.0.0-1kylin1k30) v101; urgency=medium

  * 优化音频设备连接逻辑
  * 托盘显示的设备名长度缩略

 -- guang tang <tangguang@kylinos.cn>  Wed, 10 Mar 2021 22:50:10 +0800

ukui-bluetooth (1.0.0-1kylin1k29) v101; urgency=medium

  * 修复蓝牙键盘不能连接问题
  * 替换部分图标

 -- guang tang <tangguang@kylinos.cn>  Wed, 10 Mar 2021 19:45:03 +0800

ukui-bluetooth (1.0.0-1kylin1k28) v101; urgency=medium

  * 添加飞行模式下，可以开启蓝牙
  * 解决蓝牙配置文件写失败问题

 -- guang tang <tangguang@kylinos.cn>  Tue, 09 Mar 2021 20:11:10 +0800

ukui-bluetooth (1.0.0-1kylin1k27) v101; urgency=medium

  * 解决蓝牙服务重启，托盘图标状态异常
  * 修改回连机制为，只回连外设
  * fix bug#41958

 -- guang tang <tangguang@kylinos.cn>  Tue, 09 Mar 2021 10:26:29 +0800

ukui-bluetooth (1.0.0-1kylin1k26) v101; urgency=medium

  * 文件目录调整
  * 修复安装后必现错误

 -- guang tang <tangguang@kylinos.cn>  Sat, 06 Mar 2021 10:04:37 +0800
