@@ -11,7 +11,8 @@ Build-Depends: debhelper (>= 9),
                libxrandr-dev,
                libxinerama-dev,
                libxi-dev,
-               libxcursor-dev
+               libxcursor-dev,
+               libukui-log4qt-dev
 #               libkf5bluezqt6-dev
 Standards-Version: 4.4.1
 Homepage: https://github.com/supreme886/ukui-bluetooth
@@ -26,8 +27,9 @@ Depends: libkf5bluezqt6,
 	 bluez (>= 5), 
          bluez-obexd, 
          peony-bluetooth,
+         libukui-log4qt-dev,
          ${shlibs:Depends}, ${misc:Depends}
 Recommends: pulseaudio-module-bluetooth
 Conflicts: blueman
-Description: <insert up to 60 chars description>
- <insert long description, indented with spaces>
+Description: Manual for UKUI desktop environment (common files)
+ A lightweight Bluetooth tool based on libkf5bluezqt6 on the UKUI desktop environment
